# pydantic-dataclasses-sqlalchemy

./: .gitignore  Makefile  README.md  pyproject.toml
notes/: code_mike_bayer.py  locating-error.md  questions.md  the-problem.md  the-solution.md
pdsqla/: base_class.py  constants.py  dcs.py  models.py
tests/: conftest.py  test_db.py  test_insert.py
